--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,22 +18,22 @@
   <body>
     <div id="app">
       <div id="bar">
-        <h1>📺 TV shows search</h1>
+        <h1>📺 Filmes/Séries 📺</h1>
         <form id="search-form">
           <input
             type="text"
             id="query"
             name="query"
-            placeholder="type a show name"
+            placeholder="Escreva aqui"
           />
-          <button>search</button>
+          <button>Procurar</button>
         </form>
       </div>
       <div id="results">
         <p id="message"></p>
         <ul id="shows"></ul>
       </div>
-      <p>by NOME DO ALUNO</p>
+      <p>by Schinaider</p>
     </div>
     <script src="index.js"></script>
   </body>
